--- a/CoolConfig.json
+++ b/CoolConfig.json
@@ -1,3 +1,9 @@
 {
-    
+    "bannerCard": [
+        {
+            "url": "https://github.com/ejiaogl/FuckCoolapk/issues/13",
+            "pic": "https://cdn.jsdelivr.net/gh/ejiaogl/FuckCoolapk@master/art/316/316-2.png"
+        }
+    ],
+    "redirectLink": "www.coolapk1s.com"
 }
