--- a/CoolConfig.json
+++ b/CoolConfig.json
@@ -1,7 +1,7 @@
 {
     "bannerCard": [
         {
-            "url": "https://github.com/ejiaogl/FuckCoolapk/issues/13",
+            "url": "https://316.coolapk1s.com",
             "pic": "https://cdn.jsdelivr.net/gh/ejiaogl/FuckCoolapk@master/art/316/316-2.png"
         }
     ],
