--- a/CoolConfig.json
+++ b/CoolConfig.json
@@ -1,6 +1,8 @@
 {
     "bannerCard": [
         {
+            "enable": true,
+            "auto": true,
             "url": "https://316.coolapk1s.com",
             "pic": "https://cdn.jsdelivr.net/gh/ejiaogl/FuckCoolapk@master/art/316/316-2.png"
         }
