forced enable 1 week

--- a/CoolConfig.json
+++ b/CoolConfig.json
@@ -3,7 +3,7 @@
         {
             "enable": true,
             "auto": true,
-            "forced": false,
+            "forced": true,
             "url": "https://316.coolapk1s.com",
             "pic": "https://cdn.jsdelivr.net/gh/ejiaogl/FuckCoolapk@master/art/316/316-2.png"
         }
